Add website question UI and integration

--- a/index.html
+++ b/index.html
@@ -19,6 +19,18 @@
     <button id="send-button">Send</button>
   </div>
 
+  <!-- New Section: Ask About a Website -->
+  <hr>
+  <h3>Ask About a Website</h3>
+  <label for="urlInput">Website URL:</label>
+  <input type="text" id="urlInput" placeholder="https://example.com" style="width: 100%; margin-bottom: 10px;">
+
+  <label for="urlQuestionInput">Your Question:</label>
+  <input type="text" id="urlQuestionInput" placeholder="What is this page about?" style="width: 100%; margin-bottom: 10px;">
+
+  <button id="urlSubmit">Ask About Website</button>
+  <div id="urlResponse" style="margin-top: 10px; font-weight: bold;"></div>
+
   <script src="chatbot.js"></script>
 </body>
 </html>
