--- a/index.html
+++ b/index.html
@@ -31,6 +31,14 @@
   <button id="urlSubmit">Ask About Website</button>
   <div id="urlResponse" style="margin-top: 10px; font-weight: bold;"></div>
 
+  <!-- ✅ Upload Document Section -->
+  <hr>
+  <h3>Upload Document</h3>
+  <input type="file" id="fileInput">
+  <button id="uploadBtn">Upload and Ingest</button>
+  <div id="uploadStatus"></div>
+
   <script src="chatbot.js"></script>
 </body>
 </html>
+
