Enhanced chat to support optional full site crawling via /crawl-and-chat-also-button-fix

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
   <h1>Welcome to My Website</h1>
   <p>This site has an AI assistant in the corner. Ask anything!</p>
 
+<!-- ✅ Chat Button (floating icon) -->
+<div id="chat-button">💬</div>
+
+
   <!-- Chatbot Widget -->
   <div id="chat-box" class="hidden">
     <div id="chat-header">AI Assistant <span id="close-chat">×</span></div>
